[gd_scene load_steps=4 format=3 uid="uid://weg7jdo4eoyd"]

[ext_resource type="Script" path="res://scenes/UI/draupnir_menu.gd" id="1_ftskn"]
[ext_resource type="Script" path="res://scenes/UI/DraupnirInfoBox.gd" id="2_ssjji"]
[ext_resource type="Texture2D" uid="uid://drrshtxgkjmdv" path="res://assets/draupnirs/DraupnirMenuFrame.png" id="3_ewssw"]

[node name="DraupnirMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_ftskn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_ewssw")
draw_center = false
region_rect = Rect2(25.6269, 38.3135, 2308.87, 1572.89)
patch_margin_left = 125
patch_margin_top = 200
patch_margin_right = 125
patch_margin_bottom = 200

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 110
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Space" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="EquipedDraupnirs" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EquipedDraupnirs"]
layout_mode = 2

[node name="DraupnirInfo" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DraupnirInfoBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("2_ssjji")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="Cost" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DraupnirInfo/MarginContainer/DraupnirInfoBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 2

[node name="DraupnirsIconsGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 9

[connection signal="draw" from="." to="." method="_on_draw"]
